@@ -1,3 +1,8 @@
+2007-03-19 svu
+
+	* libxklavier/xklavier_toplevel.c: fixing the default group processing.
+	Closing http://bugzilla.gnome.org/show_bug.cgi?id=414269
+
 2007-02-23 svu
 
 	* libxklavier/xklavier.c: workaround for xlib ambiguous behavior.
